@@ -1138,7 +1138,7 @@ Here is a list of all functions, variables, defines, enums, and typedefs with li
 : <a class="el" href="group__orx_config.html#gafa91f263f305b66045e0ec603a640463">orxConfig.h</a>
 </li>
 <li>orxCONFIG_SAVE_FUNCTION
-: <a class="el" href="group__orx_config.html#gaf674028c51a7667169a85d34ace5734d">orxConfig.h</a>
+: <a class="el" href="group__orx_config.html#ga7e6115a8a97bcce5c51485a75445d52a">orxConfig.h</a>
 </li>
 <li>orxConfig_SelectSection()
 : <a class="el" href="group__orx_config.html#gae7895ee64c94af8fa264c1e00e95833b">orxConfig.h</a>
