@@ -82,7 +82,7 @@
 : <a class="el" href="group__orx_clock.html#gac7e3bed26af64a3b844f0e0ba0500032">orxClock.h</a>
 </li>
 <li>orxCONFIG_SAVE_FUNCTION
-: <a class="el" href="group__orx_config.html#gaf674028c51a7667169a85d34ace5734d">orxConfig.h</a>
+: <a class="el" href="group__orx_config.html#ga7e6115a8a97bcce5c51485a75445d52a">orxConfig.h</a>
 </li>
 <li>orxEVENT_HANDLER
 : <a class="el" href="group__orx_event.html#ga30a8b5c0b1b466b6db9da6d6e17497b9">orxEvent.h</a>
