@@ -31,7 +31,7 @@
 <table class="memberdecls">
 <tr><td colspan="2"><h2><a name="typedef-members"></a>
 Typedefs</h2></td></tr>
-<tr><td class="memItemLeft" align="right" valign="top">typedef orxBOOL(orxFASTCALL *&#160;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_config.html#gaf674028c51a7667169a85d34ace5734d">orxCONFIG_SAVE_FUNCTION</a> )(const orxSTRING _zSectionName, const orxSTRING _zKeyName, orxBOOL _bUseEncryption)</td></tr>
+<tr><td class="memItemLeft" align="right" valign="top">typedef orxBOOL(orxFASTCALL *&#160;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_config.html#ga7e6115a8a97bcce5c51485a75445d52a">orxCONFIG_SAVE_FUNCTION</a> )(const orxSTRING _zSectionName, const orxSTRING _zKeyName, const orxSTRING _zFileName, orxBOOL _bUseEncryption)</td></tr>
 <tr><td colspan="2"><h2><a name="enum-members"></a>
 Enumerations</h2></td></tr>
 <tr><td class="memItemLeft" align="right" valign="top">enum &#160;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_config.html#gad70a5ee64ac35b8fdd9cdaf3e4a1d267">orxCONFIG_EVENT</a> { <br/>
@@ -88,7 +88,7 @@ orxFASTCALL&#160;</td><td class="memItemRight" valign="bottom"><a class="el" hre
 <tr><td class="memItemLeft" align="right" valign="top">orxDLLAPI <a class="el" href="group__orx_type.html#ga18b11c4d0ed79ac2f8542e3bcfac340d">orxSTATUS</a> orxFASTCALL&#160;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_config.html#gac1e65aaecdc7d8349ca76bee0d54f38d">orxConfig_PushSection</a> (const orxSTRING _zSectionName)</td></tr>
 <tr><td class="memItemLeft" align="right" valign="top">orxDLLAPI <a class="el" href="group__orx_type.html#ga18b11c4d0ed79ac2f8542e3bcfac340d">orxSTATUS</a> orxFASTCALL&#160;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_config.html#ga562bf302ede01bd632e5676cc9fef764">orxConfig_ReloadHistory</a> ()</td></tr>
 <tr><td class="memItemLeft" align="right" valign="top">orxDLLAPI <a class="el" href="group__orx_type.html#ga18b11c4d0ed79ac2f8542e3bcfac340d">orxSTATUS</a> orxFASTCALL&#160;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_config.html#ga5726d4058a6f7b9f9004314c6b7f21d3">orxConfig_RenameSection</a> (const orxSTRING _zSectionName, const orxSTRING _zNewSectionName)</td></tr>
-<tr><td class="memItemLeft" align="right" valign="top">orxDLLAPI <a class="el" href="group__orx_type.html#ga18b11c4d0ed79ac2f8542e3bcfac340d">orxSTATUS</a> orxFASTCALL&#160;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_config.html#gafa91f263f305b66045e0ec603a640463">orxConfig_Save</a> (const orxSTRING _zFileName, orxBOOL _bUseEncryption, const <a class="el" href="group__orx_config.html#gaf674028c51a7667169a85d34ace5734d">orxCONFIG_SAVE_FUNCTION</a> _pfnSaveCallback)</td></tr>
+<tr><td class="memItemLeft" align="right" valign="top">orxDLLAPI <a class="el" href="group__orx_type.html#ga18b11c4d0ed79ac2f8542e3bcfac340d">orxSTATUS</a> orxFASTCALL&#160;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_config.html#gafa91f263f305b66045e0ec603a640463">orxConfig_Save</a> (const orxSTRING _zFileName, orxBOOL _bUseEncryption, const <a class="el" href="group__orx_config.html#ga7e6115a8a97bcce5c51485a75445d52a">orxCONFIG_SAVE_FUNCTION</a> _pfnSaveCallback)</td></tr>
 <tr><td class="memItemLeft" align="right" valign="top">orxDLLAPI <a class="el" href="group__orx_type.html#ga18b11c4d0ed79ac2f8542e3bcfac340d">orxSTATUS</a> orxFASTCALL&#160;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_config.html#gae7895ee64c94af8fa264c1e00e95833b">orxConfig_SelectSection</a> (const orxSTRING _zSectionName)</td></tr>
 <tr><td class="memItemLeft" align="right" valign="top">orxDLLAPI <a class="el" href="group__orx_type.html#ga18b11c4d0ed79ac2f8542e3bcfac340d">orxSTATUS</a> orxFASTCALL&#160;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_config.html#ga6e2aadd4477e35e776ad8e85b836ff08">orxConfig_SetBaseName</a> (const orxSTRING _zBaseName)</td></tr>
 <tr><td class="memItemLeft" align="right" valign="top">orxDLLAPI <a class="el" href="group__orx_type.html#ga18b11c4d0ed79ac2f8542e3bcfac340d">orxSTATUS</a> orxFASTCALL&#160;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_config.html#ga937507317c0d6fb4b2f37fe854c384e0">orxConfig_SetBool</a> (const orxSTRING _zKey, orxBOOL _bValue)</td></tr>
@@ -106,12 +106,12 @@ orxFASTCALL&#160;</td><td class="memItemRight" valign="bottom"><a class="el" hre
 <hr/><a name="_details"></a><h2>Detailed Description</h2>
 <p>Config module Module that handles configuration files </p>
 <hr/><h2>Typedef Documentation</h2>
-<a class="anchor" id="gaf674028c51a7667169a85d34ace5734d"></a><!-- doxytag: member="orxConfig.h::orxCONFIG_SAVE_FUNCTION" ref="gaf674028c51a7667169a85d34ace5734d" args=")(const orxSTRING _zSectionName, const orxSTRING _zKeyName, orxBOOL _bUseEncryption)" -->
+<a class="anchor" id="ga7e6115a8a97bcce5c51485a75445d52a"></a><!-- doxytag: member="orxConfig.h::orxCONFIG_SAVE_FUNCTION" ref="ga7e6115a8a97bcce5c51485a75445d52a" args=")(const orxSTRING _zSectionName, const orxSTRING _zKeyName, const orxSTRING _zFileName, orxBOOL _bUseEncryption)" -->
 <div class="memitem">
 <div class="memproto">
       <table class="memname">
         <tr>
-          <td class="memname">typedef orxBOOL(orxFASTCALL * <a class="el" href="group__orx_config.html#gaf674028c51a7667169a85d34ace5734d">orxCONFIG_SAVE_FUNCTION</a>)(const orxSTRING _zSectionName, const orxSTRING _zKeyName, orxBOOL _bUseEncryption)</td>
+          <td class="memname">typedef orxBOOL(orxFASTCALL * <a class="el" href="group__orx_config.html#ga7e6115a8a97bcce5c51485a75445d52a">orxCONFIG_SAVE_FUNCTION</a>)(const orxSTRING _zSectionName, const orxSTRING _zKeyName, const orxSTRING _zFileName, orxBOOL _bUseEncryption)</td>
         </tr>
       </table>
 </div>
@@ -1116,7 +1116,7 @@ orxFASTCALL&#160;</td><td class="memItemRight" valign="bottom"><a class="el" hre
         <tr>
           <td class="paramkey"></td>
           <td></td>
-          <td class="paramtype">const <a class="el" href="group__orx_config.html#gaf674028c51a7667169a85d34ace5734d">orxCONFIG_SAVE_FUNCTION</a>&#160;</td>
+          <td class="paramtype">const <a class="el" href="group__orx_config.html#ga7e6115a8a97bcce5c51485a75445d52a">orxCONFIG_SAVE_FUNCTION</a>&#160;</td>
           <td class="paramname"> <em>_pfnSaveCallback</em>&#160;</td>
         </tr>
         <tr>
