@@ -74,7 +74,7 @@
 <a name="l00064"></a>00064 } <a class="code" href="group__orx_config.html#gad70a5ee64ac35b8fdd9cdaf3e4a1d267">orxCONFIG_EVENT</a>;
 <a name="l00065"></a>00065 
 <a name="l00066"></a>00066 
-<a name="l00068"></a><a class="code" href="group__orx_config.html#gaf674028c51a7667169a85d34ace5734d">00068</a> <span class="keyword">typedef</span> orxBOOL (orxFASTCALL *<a class="code" href="group__orx_config.html#gaf674028c51a7667169a85d34ace5734d">orxCONFIG_SAVE_FUNCTION</a>)(<span class="keyword">const</span> orxSTRING _zSectionName, <span class="keyword">const</span> orxSTRING _zKeyName, orxBOOL _bUseEncryption);
+<a name="l00068"></a><a class="code" href="group__orx_config.html#ga7e6115a8a97bcce5c51485a75445d52a">00068</a> <span class="keyword">typedef</span> orxBOOL (orxFASTCALL *<a class="code" href="group__orx_config.html#ga7e6115a8a97bcce5c51485a75445d52a">orxCONFIG_SAVE_FUNCTION</a>)(<span class="keyword">const</span> orxSTRING _zSectionName, <span class="keyword">const</span> orxSTRING _zKeyName, <span class="keyword">const</span> orxSTRING _zFileName, orxBOOL _bUseEncryption);
 <a name="l00069"></a>00069 
 <a name="l00070"></a>00070 
 <a name="l00073"></a>00073 <span class="keyword">extern</span> <a class="code" href="group__orx_decl.html#gae6527efdaa8c25ec0ea370a9acb1c2ba">orxDLLAPI</a> <span class="keywordtype">void</span> orxFASTCALL             <a class="code" href="group__orx_config.html#gaac7aef3439efd74032ebedf83d9bc830">orxConfig_Setup</a>();
@@ -95,7 +95,7 @@
 <a name="l00108"></a>00108 
 <a name="l00112"></a>00112 <span class="keyword">extern</span> <a class="code" href="group__orx_decl.html#gae6527efdaa8c25ec0ea370a9acb1c2ba">orxDLLAPI</a> <a class="code" href="group__orx_type.html#ga18b11c4d0ed79ac2f8542e3bcfac340d">orxSTATUS</a> orxFASTCALL        <a class="code" href="group__orx_config.html#ga562bf302ede01bd632e5676cc9fef764">orxConfig_ReloadHistory</a>();
 <a name="l00113"></a>00113 
-<a name="l00120"></a>00120 <span class="keyword">extern</span> <a class="code" href="group__orx_decl.html#gae6527efdaa8c25ec0ea370a9acb1c2ba">orxDLLAPI</a> <a class="code" href="group__orx_type.html#ga18b11c4d0ed79ac2f8542e3bcfac340d">orxSTATUS</a> orxFASTCALL        <a class="code" href="group__orx_config.html#gafa91f263f305b66045e0ec603a640463">orxConfig_Save</a>(<span class="keyword">const</span> orxSTRING _zFileName, orxBOOL _bUseEncryption, <span class="keyword">const</span> <a class="code" href="group__orx_config.html#gaf674028c51a7667169a85d34ace5734d">orxCONFIG_SAVE_FUNCTION</a> _pfnSaveCallback);
+<a name="l00120"></a>00120 <span class="keyword">extern</span> <a class="code" href="group__orx_decl.html#gae6527efdaa8c25ec0ea370a9acb1c2ba">orxDLLAPI</a> <a class="code" href="group__orx_type.html#ga18b11c4d0ed79ac2f8542e3bcfac340d">orxSTATUS</a> orxFASTCALL        <a class="code" href="group__orx_config.html#gafa91f263f305b66045e0ec603a640463">orxConfig_Save</a>(<span class="keyword">const</span> orxSTRING _zFileName, orxBOOL _bUseEncryption, <span class="keyword">const</span> <a class="code" href="group__orx_config.html#ga7e6115a8a97bcce5c51485a75445d52a">orxCONFIG_SAVE_FUNCTION</a> _pfnSaveCallback);
 <a name="l00121"></a>00121 
 <a name="l00125"></a>00125 <span class="keyword">extern</span> <a class="code" href="group__orx_decl.html#gae6527efdaa8c25ec0ea370a9acb1c2ba">orxDLLAPI</a> <a class="code" href="group__orx_type.html#ga18b11c4d0ed79ac2f8542e3bcfac340d">orxSTATUS</a> orxFASTCALL        <a class="code" href="group__orx_config.html#gae7895ee64c94af8fa264c1e00e95833b">orxConfig_SelectSection</a>(<span class="keyword">const</span> orxSTRING _zSectionName);
 <a name="l00126"></a>00126 
